<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:healthengine="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_toolbar">

            <healthengine.android.com.healthengine.FontedText
                android:id="@+id/cancel_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10"
                android:text="@string/text_cancel"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_15"
                healthengine:font="Lato-Regular.ttf" />

            <healthengine.android.com.healthengine.FontedText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/patient_profile"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_15"
                healthengine:font="Lato-Regular.ttf" />

            <healthengine.android.com.healthengine.FontedText
                android:id="@+id/done_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/margin_10"
                android:padding="@dimen/margin_10"
                android:text="@string/done"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_15"
                android:visibility="gone"
                healthengine:font="Lato-Regular.ttf"
                />


        </android.support.v7.widget.Toolbar>


        <healthengine.android.com.healthengine.FontedText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:text="@string/contact_info"
            android:textSize="@dimen/text_size_15"
            healthengine:font="Lato-Regular.ttf" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/color_white"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:background="@color/color_white"
                android:orientation="horizontal">


                <healthengine.android.com.healthengine.FontedEditText
                   android:id="@+id/fName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/f_name"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    healthengine:font="Lato-Regular.ttf"></healthengine.android.com.healthengine.FontedEditText>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/normal_gray" />

                <healthengine.android.com.healthengine.FontedEditText
                    android:id="@+id/lName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/l_name"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    healthengine:font="Lato-Regular.ttf"></healthengine.android.com.healthengine.FontedEditText>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@color/normal_gray" />


            <healthengine.android.com.healthengine.FontedEditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/mobile_num"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:inputType="number"
                healthengine:font="Lato-Regular.ttf"></healthengine.android.com.healthengine.FontedEditText>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@color/normal_gray" />

            <healthengine.android.com.healthengine.FontedEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                healthengine:font="Lato-Regular.ttf"></healthengine.android.com.healthengine.FontedEditText>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@color/normal_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <healthengine.android.com.healthengine.FontedText
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="@dimen/margin_10"
                    android:layout_toLeftOf="@+id/notification_switch"
                    android:padding="@dimen/margin_10"
                    android:text="@string/notification_txt"
                    android:textSize="@dimen/help_screen_text_3"
                    healthengine:font="Lato-Regular.ttf" />

                <Switch
                    android:id="@+id/notification_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/margin_10" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darker_gray" />


        </LinearLayout>


        <healthengine.android.com.healthengine.FontedText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:text="@string/address"
            android:textSize="@dimen/text_size_15"
            healthengine:font="Lato-Regular.ttf" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/color_white"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darker_gray" />


            <healthengine.android.com.healthengine.FontedEditText
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_48"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/street"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                healthengine:font="Lato-Regular.ttf"></healthengine.android.com.healthengine.FontedEditText>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:background="@color/normal_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:orientation="horizontal"
                android:weightSum="1">

                <healthengine.android.com.healthengine.FontedEditText
                    android:id="@+id/subUrb"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_48"
                    android:layout_weight="0.6"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/sub_urb"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    healthengine:font="Lato-Regular.ttf"></healthengine.android.com.healthengine.FontedEditText>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/normal_gray" />

                <healthengine.android.com.healthengine.FontedEditText
                    android:id="@+id/postcode"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_48"
                    android:layout_weight="0.4"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/post_code"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    healthengine:font="Lato-Regular.ttf"></healthengine.android.com.healthengine.FontedEditText>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/darker_gray" />

        </LinearLayout>


        <healthengine.android.com.healthengine.FontedText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:textSize="@dimen/text_size_15"
            healthengine:font="Lato-Regular.ttf" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darker_gray" />

        <healthengine.android.com.healthengine.FontedText
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_48"
            android:paddingLeft="@dimen/margin_20"

            android:gravity="center_vertical"
            android:text="@string/tap_dob"
            android:textColor="@color/color_toolbar"
            android:textSize="@dimen/text_size_15"
            android:background="@color/color_white"
            healthengine:font="Lato-Regular.ttf" />


        <DatePicker
            android:id="@+id/patient_datepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF"

            android:calendarViewShown="false"
            android:padding="5dp"
            android:visibility="gone"></DatePicker>

    </LinearLayout>

</ScrollView>